domd: salvator-x-h3-4x2g: Passthrough VCP4/VSP/FDP devices to DomU
This patch inserts appropriate device/reserved memory nodes to DomU DT
(keeping the PM resources commented) and disabling these devices
in DomD DT.

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>

--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-salvator-x-4x2g-domd.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-salvator-x-4x2g-domd.dts
@@ -80,3 +80,39 @@
 &sound_card {
 	dais = <&rsnd_port0>; /* ak4613 */
 };
+
+&ivdp1c {
+	status = "disabled";
+};
+
+&vcplf {
+	status = "disabled";
+};
+
+&vdpb {
+	status = "disabled";
+};
+
+&vspbc {
+	status = "disabled";
+};
+
+&vspbd {
+	status = "disabled";
+};
+
+&vspi0 {
+	status = "disabled";
+};
+
+&vspi1 {
+	status = "disabled";
+};
+
+&fdp0 {
+	status = "disabled";
+};
+
+&fdp1 {
+	status = "disabled";
+};
