domd: salvator-x-h3-4x2g: hack: Describe A2VC1 PD in DU node
Some multimedia devices are located in _non_always_on power
domains, therefore they must be explicitly powered up before usage.

The problem is that these devices being assigned to DomU which
doesn't have a control over the PM resources.

The A3VP and A3VC PDs are enabled by Xen as some Cache IPMMUs
located here. So, we have to care for enabling A2VC1 PD only.

TODO: There should some dedicated PM driver in the system to perform
such work.

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>

--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-salvator-x-4x2g-domd.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-salvator-x-4x2g-domd.dts
@@ -151,4 +151,6 @@
 		      "vspi1_vsp", "vspi1_fcp",
 		      "fdp0_vsp", "fdp0_fcp",
 		      "fdp1_vsp", "fdp1_fcp";
+
+	power-domains = <&sysc R8A7795_PD_A2VC1>;
 };
