dom0/domd: salvator-xs-h3-4x2g: Update DomD's DT and config file ...
   ... for assigning VCP4/VSP/FDP devices to DomU

Update only DomD's resources since DomU's ones are common for
both machines salvator-xs-h3-4x2g and salvator-x-h3-4x2g.

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>

--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-salvator-xs-h3-4x2g.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-salvator-xs-h3-4x2g.cfg
@@ -14,9 +14,9 @@ device_tree = "/xt/domd/domd.dtb"
 
 # Kernel command line options
 # Uncomment this when using nfs as a boot device
-#extra = "root=/dev/nfs nfsroot=192.168.1.100:/srv/domd,vers=3 ip=dhcp rw rootwait console=hvc0 pvrsrvkm.DriverMode=0"
+#extra = "modprobe.blacklist=vsp2,vspm,vspm_if,uvcs_drv,mmngr,mmngrbuf root=/dev/nfs nfsroot=192.168.1.100:/srv/domd,vers=3 ip=dhcp rw rootwait console=hvc0 pvrsrvkm.DriverMode=0"
 # Uncomment this when using block device as a boot device
-extra = "root=/dev/STORAGE_PART2 rw rootwait console=hvc0 pvrsrvkm.DriverMode=0"
+extra = "modprobe.blacklist=vsp2,vspm,vspm_if,uvcs_drv,mmngr,mmngrbuf root=/dev/STORAGE_PART2 rw rootwait console=hvc0 pvrsrvkm.DriverMode=0"
 
 # Initial memory allocation (MB)
 memory = 2048
@@ -116,23 +116,15 @@ dtdev = [
     "/soc/imr-lx4@fe870000",
     "/soc/imr-lx4@fe880000",
     "/soc/imr-lx4@fe890000",
-    "/soc/vspm@fe920000",
-    "/soc/vspm@fe960000",
-    "/soc/vspm@fe9a0000",
-    "/soc/vspm@fe9b0000",
     "/soc/fcp@fea27000",
     "/soc/fcp@fea2f000",
     "/soc/fcp@fea37000",
-    "/soc/fdpm@fe940000",
-    "/soc/fdpm@fe944000",
     "/soc/hdmi@fead0000",
     "/soc/hdmi@feae0000",
     "/soc/gsx_pv0_domd",
     "/soc/gsx_pv1_domd",
     "/soc/gsx_pv2_domd",
     "/soc/gsx_pv3_domd",
-    "/soc/fcpcs_vc0",
-    "/soc/fcpcs_vc1",
 ]
 
 irqs = [
@@ -278,30 +270,12 @@ irqs = [
     227,
 # gsx@fd000000
     151,
-# vcp4@fe910000
-    292, 293,
-# vcp4@fe900000
-    272, 273,
-# vcp4@fe8d0000
-    412, 413, 255,
-# vspm@fe920000
-    497,
-# vspm@fe960000
-    298,
-# vspm@fe9a0000
-    476,
-# vspm@fe9b0000
-    477,
 # vsp@fea20000
     498,
 # vsp@fea28000
     499,
 # vsp@fea30000
     500,
-# fdpm@fe940000
-    294,
-# fdpm@fe944000
-    295,
 # hdmi@fead0000
     421,
 # hdmi@feae0000
@@ -462,37 +436,6 @@ iomem = [
     "e67e0,11",
 #gsx@fd000000
     "fd000,40",
-#vcp4@fe910000
-#vcp4@fe910000
-    "fe910,1",
-#vcp4@fe900000
-#vcp4@fe900000
-    "fe900,1",
-#vcp4@fe8d0000
-#vcp4@fe8d0000
-    "fe8d0,1",
-#vcp4@fe90f000
-    "fe90f,1",
-#vsp@fe920000
-#vspm@fe920000
-    "fe920,8",
-#vspm@fe920000
-    "fe92f,1",
-#vsp@fe960000
-#vspm@fe960000
-    "fe960,8",
-#vspm@fe960000
-    "fe96f,1",
-#vsp@fe9a0000
-#vspm@fe9a0000
-    "fe9a0,8",
-#vspm@fe9a0000
-    "fe9af,1",
-#vsp@fe9b0000
-#vspm@fe9b0000
-    "fe9b0,8",
-#vspm@fe9b0000
-    "fe9bf,1",
 #vsp@fea20000
     "fea20,5",
 #fcp@fea27000
@@ -505,14 +448,6 @@ iomem = [
     "fea30,5",
 #fcp@fea37000
     "fea37,1",
-#fdpm@fe940000
-    "fe940,3",
-#fdpm@fe940000
-    "fe950,1",
-#fdpm@fe944000
-    "fe944,3",
-#fdpm@fe944000
-    "fe951,1",
 #hdmi@fead0000
     "fead0,10",
 #hdmi@feae0000
